--- a/particle_dark/assets/css/custom/tableau.css
+++ b/particle_dark/assets/css/custom/tableau.css
@@ -34,9 +34,9 @@ body,
 }
 
 #joconde {
-    background-color: #0c161e;
     height: 600px;
-    margin: 0 auto;
+    width: 457px;
+    margin: auto;
 }
 
 #joconde > img {
@@ -45,54 +45,264 @@ body,
 }
 
 #eye-left {
-  margin-left: 47.5%;
+  margin-left: 14.2%;
 }
 
 #eye-right {
-  margin-left: 49.7%;
+  margin-left: 16.5%;
+}
+
+@media (max-width: 1420px) {
+  #eye-left {
+    margin-left: 14.5%;
+  }
+  #eye-right {
+    margin-left: 16.7%;
+  }
+}
+
+@media (max-width: 1400px) {
+  #eye-left {
+    margin-left: 14.7%;
+  }
+  #eye-right {
+    margin-left: 17.1%;
+  }
+}
+
+@media (max-width: 1380px) {
+  #eye-left {
+    margin-left: 14.9%;
+  }
+  #eye-right {
+    margin-left: 17.3%;
+  }
 }
 
 @media (max-width: 1350px) {
   #eye-left {
-    margin-left: 47.2%;
+    margin-left: 15.2%;
   }
-
   #eye-right {
-    margin-left: 49.6%;
+    margin-left: 17.6%;
+  }
+}
+
+@media (max-width: 1340px) {
+  #eye-left {
+    margin-left: 15.5%;
+  }
+  #eye-right {
+    margin-left: 17.9%;
+  }
+}
+
+@media (max-width: 1310px) {
+  #eye-left {
+    margin-left: 15.8%;
+  }
+  #eye-right {
+    margin-left: 18.2%;
+  }
+}
+
+@media (max-width: 1290px) {
+  #eye-left {
+    margin-left: 16.4%;
+  }
+  #eye-right {
+    margin-left: 18.9%;
+  }
+}
+
+@media (max-width: 1250px) {
+  #services > div > div > div.col-md-12.service-content > div.left, #services > div > div > div.col-md-12.service-content > div.right {
+    width: 28%;
+  }
+  #eye-left {
+    margin-left: 16.5%;
+  }
+  #eye-right {
+    margin-left: 19.2%;
+  }
+}
+
+@media (max-width: 1230px) {
+  #eye-left {
+    margin-left: 16.7%;
+  }
+  #eye-right {
+    margin-left: 19.5%;
+  }
+}
+
+@media (max-width: 1215px) {
+  #eye-left {
+    margin-left: 17%;
+  }
+  #eye-right {
+    margin-left: 19.8%;
+  }
+}
+
+@media (max-width: 1200px) {
+  #eye-left {
+    margin-left: 16.2%;
+  }
+  #eye-right {
+    margin-left: 18.9%;
+  }
+}
+
+@media (max-width: 1190px) {
+  #eye-left {
+    margin-left: 16.5%;
+  }
+  #eye-right {
+    margin-left: 19.3%;
+  }
+}
+
+@media (max-width: 1170px) {
+  #eye-left {
+    margin-left: 16.8%;
+  }
+  #eye-right {
+    margin-left: 19.5%;
   }
 }
 
 @media (max-width: 1150px) {
+  #services > div > div > div.col-md-12.service-content > div.left, #services > div > div > div.col-md-12.service-content > div.right {
+    width: 25%;
+  }
   #eye-left {
-    margin-left: 46.9%;
+    margin-left: 17.2%;
+  }
+  #eye-right {
+    margin-left: 19.9%;
   }
 }
 
-@media (max-width: 990px) {
+@media (max-width: 1120px) {
   #eye-left {
-    margin-left: 46.5%;
+    margin-left: 17.6%;
+  }
+  #eye-right {
+    margin-left: 20.4%;
   }
 }
 
-@media (max-width: 900px) {
+@media (max-width: 1100px) {
   #eye-left {
-    margin-left: 46%;
+    margin-left: 17.9%;
+  }
+  #eye-right {
+    margin-left: 20.7%;
   }
 }
 
-@media (max-width: 800px) {
+@media (max-width: 1085px) {
   #eye-left {
-    margin-left: 45.7%;
+    margin-left: 18.2%;
+  }
+  #eye-right {
+    margin-left: 21%;
   }
 }
 
-@media (max-width: 720px) {
+@media (max-width: 1070px) {
   #eye-left {
-      margin-left: 45%;
+    margin-left: 18.5%;
+  }
+  #eye-right {
+    margin-left: 21.4%;
   }
 }
 
-@media (max-width: 690px) {
+@media (max-width: 1050px) {
+  #eye-left {
+    margin-left: 18.8%;
+  }
+  #eye-right {
+    margin-left: 21.7%;
+  }
+}
+
+@media (max-width: 1030px) {
+  #eye-left {
+    margin-left: 19.2%;
+  }
+  #eye-right {
+    margin-left: 22.3%;
+  }
+}
+
+@media (max-width: 1020px) {
+  #services > div > div > div.col-md-12.service-content > div.left, #services > div > div > div.col-md-12.service-content > div.right {
+    width: 45%;
+    height: 30em;
+  }
+  .eye {
+      margin-top: 597px;
+  }
+}
+
+@media (max-width: 1000px) {
+  #eye-left {
+    margin-left: 19.7%;
+  }
+  #eye-right {
+    margin-left: 22.9%;
+  }
+}
+
+@media (max-width: 980px) {
+  #eye-left {
+    margin-left: 20.1%;
+  }
+  #eye-right {
+    margin-left: 23.4%;
+  }
+}
+
+@media (max-width: 960px) {
+  #eye-left {
+    margin-left: 20.4%;
+  }
+  #eye-right {
+    margin-left: 23.8%;
+  }
+}
+
+@media (max-width: 940px) {
+  #eye-left {
+    margin-left: 21.2%;
+  }
+  #eye-right {
+    margin-left: 24.6%;
+  }
+}
+
+@media (max-width: 910px) {
+  #eye-left {
+    margin-left: 21.8%;
+  }
+  #eye-right {
+    margin-left: 25.4%;
+  }
+}
+
+@media (max-width: 890px) {
+  #eye-left {
+    margin-left: 22.2%;
+  }
+  #eye-right {
+    margin-left: 25.8%;
+  }
+}
+
+@media (max-width: 870px) {
   .eye {
       display: none;
   }
